tests/models/struct/named/u128/fail/max_length.stderr
error: Support condition is gt, ge, lt, le, alias, default and validate
 --> tests/models/struct/named/u128/fail/max_length.rs:5:5
  |
5 |     value: u128,
  |     ^^^^^
